# lms-line-sensor

./: .gitignore  README.md  line_sensor_updated.py  package.json  pyproject.toml
docs/: LICENSE  Makefile  conf.py  index.rst  make.bat  requirements.txt
docs/API/: lms-line-sensor-i2c-api.rst  lms-line-sensor-uremote-api.rst
examples/: pybricks_smoke_test.py
examples/ev3-robocup/: README.md  p_controller_line_mower.py  pd_controller_line_mower.py
examples/pybricks-robocup/: line-tracker-pybricks.py  main.py
examples/spike-direct/: README.md  line_sensor_pybricks_blocks.py
examples/spike-robocup/: README.md  line_follower_pybricks.py  lms_esp32_main.py  main.py
firmware/: README.md
firmware/I2C firmware/: README.md  firmware_ch32_line_i2c_3.87.uf2
firmware/uRemote firmware/: README.md  firmware_ch32_line_uremote_5.4.uf2
microblocks/: LMS Line Sensor.ubl
micropython/: line_sensor.py  line_sensor_pybricks.py
micropython/line_sensor/: __init__.py  base.py  i2c.py  ur.py
micropython/lms_line_sensor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_base_api.py
tools/: generate_line_sensor_pybricks.py  pybricks_bundle_ast.py
tools/pybricks_bundle/: base.py  ur.py
