[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lms-line-sensor"
dynamic = ["version"]
description = "MicroPython driver for the LMS Line Sensor over I2C"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["micropython", "i2c", "sensor", "robotics", "line-follower"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: Implementation :: MicroPython",
    "Topic :: Software Development :: Embedded Systems",
]

[project.optional-dependencies]
docs = ["sphinx>=7,<9"]

[tool.setuptools]
py-modules = ["line_sensor", "_version"]
license-files = ["LICENSE"]

[tool.setuptools.dynamic]
version = { attr = "line_sensor.__version__" }

[tool.setuptools.package-dir]
"" = "micropython"